# OCRLLM

./: .env  Cargo.toml  LICENSE  MILESTONES.md  README.md  docker-compose.yml  ocrllm.sqlite  package.json
crates/controller/: Cargo.toml
crates/controller/src/: main.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: main.rs
crates/gateway/static/: index.html
crates/gateway/target_test/: .rustc_info.json
crates/gateway/target_test/debug/.fingerprint/allocator-api2-68302292affbab41/: lib-allocator_api2  lib-allocator_api2.json
crates/gateway/target_test/debug/.fingerprint/autocfg-2d085ea288b54cbb/: lib-autocfg  lib-autocfg.json
crates/gateway/target_test/debug/.fingerprint/aws-lc-rs-c11b4eaf82436ea4/: build-script-build-script-build.json
crates/gateway/target_test/debug/.fingerprint/block-buffer-087b59aedc4f5931/: lib-block_buffer  lib-block_buffer.json
crates/gateway/target_test/debug/.fingerprint/cc-00e6548c3eb96a5d/: lib-cc  lib-cc.json
crates/gateway/target_test/debug/.fingerprint/cfg-if-59068db8513376d0/: lib-cfg_if  lib-cfg_if.json
crates/gateway/target_test/debug/.fingerprint/cmake-2778427d60763eb4/: lib-cmake  lib-cmake.json
crates/gateway/target_test/debug/.fingerprint/cpufeatures-995317b5289dd323/: lib-cpufeatures
crates/gateway/target_test/debug/.fingerprint/crc-catalog-9deb8d067c69e1b8/: lib-crc_catalog  lib-crc_catalog.json
crates/gateway/target_test/debug/.fingerprint/crossbeam-utils-1d2de5070e18a0d1/: lib-crossbeam_utils  lib-crossbeam_utils.json
crates/gateway/tests/: storage_smoke.rs
services/: requirements.txt
(+249 files in other folders)
