[package]
name = "controller"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono"] }
tokio = { version = "1.50.0", features = ["full", "rt"] }
uuid = { version = "1.22.0", features = ["v4"] }
data-pipeline = { path = "../data-pipeline" }
protocol = { path = "../protocol" }
