[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["multipart"] }
multer = "3.1.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono"] }
tokio = { version = "1.50.0", features = ["full", "rt"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["fs", "cors"] }
uuid = { version = "1.22.0", features = ["v4"] }
protocol = { path = "../protocol" }
